force-app/main/default/objects/Position__c/fields/Max_Budget__c.field-meta.xml
<CustomField>
    <fullName>Max_Budget__c</fullName>
    <description>The maximum amount of budget for this position</description>
    <label>Max Budget</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>