force-app/main/default/objects/Position__c/fields/Max_Pay__c.field-meta.xml
<CustomField>
    <fullName>Max_Pay__c</fullName>
    <description>Maximum amount of the range you are willing to pay for this position</description>
    <label>Max Pay</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>