force-app/main/default/objects/Position__c/fields/Min_Pay__c.field-meta.xml
<CustomField>
    <fullName>Min_Pay__c</fullName>
    <description>Minimum amount of the range we are willing to pay for this position</description>
    <label>Min Pay</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>