force-app/main/default/objects/Position__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>What date was this position opened in</description>
    <label>Open Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>