force-app/main/default/objects/Position__c/validationRules/Salary_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_validation</fullName>
    <active>true</active>
    <description>Makes sure that minimum pay is never greater than maximum pay</description>
    <errorConditionFormula>(Min_Pay__c &gt; Max_Pay__c)</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Minimum pay cannot be greater than maximum pay.</errorMessage>
</ValidationRule>